# owl-data

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml
docs/: index.md
src/owl/data/: __init__.py  dataset.py  lab_dataset.py  sensor_dataset.py
tests/: test_imports.py
