[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openwaterlab-data"
version = "0.1.0"
description = "Data analysis tools for water system modelling and analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-only" }
authors = [
  { name = "OpenWaterLab maintainers" }
]
dependencies = ["numpy>=2.2.2",
    "dateutils>=0.6.6",
    "scipy>=1.15.1",
    "matplotlib>=3.10.0",
    "statsmodels>=0.14.4",
    "xlrd>=2.0.1",
    "scikit-learn>=1.7.1",
    "pyyaml>=6.0.2",
    ]
    
classifiers = [
	"Development Status :: 3 - Alpha",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest>=7", "build", "twine"]

[project.urls]
Homepage = "https://github.com/OpenWaterLab/owl-data"
Repository = "https://github.com/OpenWaterLab/owl-data"
Issues = "https://github.com/OpenWaterLab/owl-data/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["owl.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]